--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,4 +26,4 @@ jobs:
     - run: npm i
     - run: npm install -g firebase-tools
     - run: npm run build --if-present
-    - run: firebase deploy
+    - run: firebase deploy --token "1//0gu8thIS3JXQoCgYIARAAGBASNwF-L9IrfJRMFU-zXsj2t05blPydn87vmfDLkcib722qpLY7ZHT2WP950bSHSTwfQ6qzU8JR6vo"
