--- a/.github/workflows/firebase.yml
+++ b/.github/workflows/firebase.yml
@@ -44,7 +44,7 @@ jobs:
         with:
           name: build
           path: build
-      - name: Depoy to Firebase
+      - name: Deploy to Firebase
         uses: w9jds/firebase-action@master
         with:
           args: deploy --only hosting
